[package]
name = "disk"
version = "0.1.0"
authors = ["wellls <wellschuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.18.0"
tempfile = "3.1.0"
memmap = "0.7.0"

skiplist = { path = "../skiplist" }
